Fix horizontal scroll on Windows browsers

--- a/src/app/styles/base.scss
+++ b/src/app/styles/base.scss
@@ -10,6 +10,8 @@ html {
 }
 body {
 	scroll-behavior: smooth;
+	max-width: 100%;
+	overflow-x: hidden;
 	min-height: 100vh;
 	-ms-scroll-chaining: none;
 	overscroll-behavior: none; // Останавливает скролл по Y на iOS
